--- a/public/app/components/general/content_header.html
+++ b/public/app/components/general/content_header.html
@@ -1,12 +1,13 @@
 <div class="row">
     <div class="col-md-16 col-lg-offset-1">
-        <div class="u-floatLeft">
+        <div class="u-floatLeft u-fontSize16">
             PROJECT NAME
         </div>
     </div>
-    <div class="col-md-4">
-        <label for="head_search">Search</label>
+    <div class="col-md-5 form-group">
         <input
+            placeholder="Search"
+            class="form-control"
             id="head_search"
             type="text"
             maxlength="255"
