feature: Added files upload

--- a/public/app/modules/messages/components/view_message.html
+++ b/public/app/modules/messages/components/view_message.html
@@ -29,3 +29,7 @@
             <button ng-click="$ctrl.sendReply()" class="btn btn-success">Send</button>
         </div>
 </div>
+
+<upload-file
+    files="$ctrl.reply.file"
+></upload-file>
