feature: Added files download

--- a/public/app/modules/messages/components/create_message.html
+++ b/public/app/modules/messages/components/create_message.html
@@ -56,6 +56,9 @@
         </ul><!-- errors -->
     </div>
 </div>
+<upload-file
+    files="$ctrl.message.files"
+></upload-file>
 <div class="row m-t-5 u-textRight">
     <div class="col-md-2 col-md-offset-22">
         <button ng-click="$ctrl.sendMessage()" class="btn btn-success">Send</button>
