--- a/public/app/modules/messages/components/upload_file.html
+++ b/public/app/modules/messages/components/upload_file.html
@@ -1,7 +1,7 @@
 <div class="m-attachment m-t-20 u-flex u-justify-center" ng-class="{'col-xs-24': $ctrl.files.length != 0, 'col-xs-12 col-sm-9': $ctrl.files.length == 0}">
     <div class="m-attachment__upload" ng-click="">
         <input style="display: none" name="file" id="file" type="file" uploader="$ctrl.uploader" nv-file-select/>
-        <label for="file" class="cursor">
+        <label ng-show="$ctrl.files.length == 0" for="file" class="cursor">
             <i class="glyphicon-file"></i>
             <span >Upload file</span>
         </label>
