--- a/public/app/modules/messages/components/view_message.html
+++ b/public/app/modules/messages/components/view_message.html
@@ -1,10 +1,11 @@
 <div class="row m-t-20 bordered">
-    <div class="col-md-24" ng-if="$ctrl.message.type == 'inbox'">
-        {{ $ctrl.message.sender.email }}
+    <div class="col-md-24">
+        Sender: {{ $ctrl.message.sender.email }}
     </div>
-    <div class="col-md-24" ng-if="$ctrl.message.type == 'send'">
-        <span ng-repeat="item in $ctrl.message.receivers">
-            {{ item.email }}&nbsp;
+    <div class="col-md-24" style="display: inline-block;">
+        Receivers: &nbsp;
+        <span  ng-repeat="item in $ctrl.message.receivers">
+            {{ item.email }}<span ng-if="!$last">, </span>
         </span>
 
     </div>
